--- a/.github/workflows/Coverage.yml
+++ b/.github/workflows/Coverage.yml
@@ -5,7 +5,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.21.x]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     name: Go test coverage check
     steps:
