--- a/.github/workflows/Coverage.yml
+++ b/.github/workflows/Coverage.yml
@@ -27,3 +27,13 @@ jobs:
           threshold-file: 70
           threshold-package: 70
           threshold-total: 80
+      - name: make coverage badge
+        uses: action-badges/core@0.2.2
+        if: contains(github.ref, 'main')
+        with:
+          label: coverage
+          message: ${{ steps.coverage.outputs.badge-text }}
+          message-color: ${{ steps.coverage.outputs.badge-color }}
+          file-name: coverage.svg
+          badge-branch: badges ## orphan branch where badge will be committed
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
