--- a/.github/workflows/Coverage.yml
+++ b/.github/workflows/Coverage.yml
@@ -2,6 +2,7 @@ on: [push, pull_request]
 name: Go test coverage check
 jobs:
   test:
+    permissions: write-all
     strategy:
       matrix:
         go-version: [1.21.x]
@@ -23,7 +24,7 @@ jobs:
           
           # Configure action by specifying input parameters individually (option 2)
           profile: cover.out
-          local-prefix: https://github.com/kordax/basic-utils
+          local-prefix: github.com/kordax/basic-utils
           threshold-file: 70
           threshold-package: 70
           threshold-total: 80
