--- a/.github/workflows/Coverage.yml
+++ b/.github/workflows/Coverage.yml
@@ -1,12 +1,12 @@
-on: [push, pull_request]
+on: [ push, pull_request ]
 name: Go test coverage check
 jobs:
   test:
     permissions: write-all
     strategy:
       matrix:
-        go-version: [1.22.x]
-        os: [ubuntu-latest]
+        go-version: [ 1.22.x ]
+        os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     name: Go test coverage check
     steps:
@@ -14,10 +14,15 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '1.22.0'
-      
+
       - name: generate test coverage
-        run: go test ./... -coverprofile=./cover.out
-    
+        run: |
+          find . -type f -name 'go.mod' -not -path "./vendor/*" | while read modfile; do \
+            dir=$(dirname $modfile); \
+            echo "go coverage in $dir"; \
+            (cd $dir && go test ./... -coverprofile=./cover.out); \
+          done
+
       - name: check test coverage
         id: coverage
         uses: vladopajic/go-test-coverage@v2
