--- a/testcoverage.yml
+++ b/testcoverage.yml
@@ -29,3 +29,6 @@ exclude:
 # NOTES:
 # - symbol `/` in all path regexps will be replaced by
 #   current OS file path separator to properly work on Windows
+override:
+  - threshold: 30
+    path: "^os-utils$"
